moved html out of assets folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./02-Challenge/Assets/style.css">
 <title>Weather Dashboard</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
 
     <h2>Search History</h2>
     <ul id="search-history"></ul>
-    <script src="script.js"></script>
+    <script src="./02-Challenge/Assets/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
